Fix wrap of menu in image-viewer
fixes #8

--- a/ui/static/css/image-viewer.css
+++ b/ui/static/css/image-viewer.css
@@ -9,6 +9,10 @@
 	position: relative;
 }
 
+#image-viewer>div {
+	white-space: nowrap;
+}
+
 image-viewer {
 	display: block;
 	position: absolute;
